@@ -1,3 +1,4 @@
+- #83 Update non-working days for 2022 in locale hu-HU
 - #81 Add locale et-EE
       (Thanks to h0adp0re)
 - #78 Add locale for sl-SI
